--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ BIN_LOOKUP_URL=https://lookup.binlist.net/
 BIN_LOOKUP_API_KEY=
 EXCHANGE_RATES_URL=https://api.apilayer.com/exchangerates_data/latest
 EXCHANGE_RATES_API_KEY=
+EU_COUNTRIES=AT,BE,BG,CY,CZ,DE,DK,EE,ES,FI,FR,GR,HR,HU,IE,IT,LT,LU,LV,MT,NL,PO,PT,RO,SE,SI,SK
+EU_COMMISSION_RATE=0.01
+NON_EU_COMMISSION_RATE=0.02
